--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link href="bundle.css" rel="stylesheet" />
-    <title>Extension Title</title>
+    <link rel="stylesheet" href="bundle.css" />
+    <title>Extension</title>
   </head>
   <body>
     <div id="root"></div>
